Styling for Menu
--> references #20

--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -25,6 +25,7 @@
 						<ControlTemplate.Triggers>
 							<Trigger Property="IsSelected" Value="true">
 								<Setter Property="Background" TargetName="Bd" Value="{ext:ThemeBinding 'window.notesview.flat.selected:background'}"/>
+								<Setter Property="Foreground"                 Value="{ext:ThemeBinding 'window.notesview.flat.selected:foreground'}"/>
 							</Trigger>
 						</ControlTemplate.Triggers>
 					</ControlTemplate>
