--- a/Source/AlephNote.App/WPF/Dialogs/GenericInputDialog.xaml
+++ b/Source/AlephNote.App/WPF/Dialogs/GenericInputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AlephNote.WPF.Dialogs.FolderNameDialog"
+﻿<Window x:Class="AlephNote.WPF.Dialogs.GenericInputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:self="clr-namespace:AlephNote.WPF.Dialogs"
         mc:Ignorable="d" ResizeMode="NoResize"
 		WindowStartupLocation="CenterOwner"
-        Title="Folder name" MinWidth="100" MinHeight="100" Height="150" Width="425">
+        Title="__TITLE__" MinWidth="100" MinHeight="100" Height="150" Width="425">
 	<Grid Name="RootGrid" d:DataContext="{self:FolderNameDialog}" >
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
