--- a/Source/AlephNote.App/WPF/Dialogs/ExceptionWindow.xaml
+++ b/Source/AlephNote.App/WPF/Dialogs/ExceptionWindow.xaml
@@ -3,6 +3,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
 		WindowStartupLocation="CenterOwner"
+		Topmost="True"
 		Title="?" Height="359" Width="541">
 	<Grid>
 		<Grid.RowDefinitions>
