--- a/Source/AlephNote.App/WPF/Windows/ThemeEditor.xaml
+++ b/Source/AlephNote.App/WPF/Windows/ThemeEditor.xaml
@@ -6,11 +6,12 @@
 		xmlns:local="clr-namespace:AlephNote.WPF.Windows"
 		xmlns:scinet="clr-namespace:ScintillaNET;assembly=ScintillaNET"
 		xmlns:proxy="clr-namespace:AlephNote.WPF.BindingProxies"
+		xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
 		mc:Ignorable="d"
 		WindowStartupLocation="CenterOwner"
 		Title="AlephNote [Theme Editor]"
 		d:DataContext="{d:DesignInstance local:ThemeEditorViewmodel}"
-		Height="500" Width="800">
+		Height="600" Width="1300">
 	<Grid Margin="8">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
@@ -26,13 +27,55 @@
 			<Button Content="New" VerticalAlignment="Center" MinWidth="50" Margin="4,0,0,0" Command="{Binding NewCommand}"/>
 		</StackPanel>
 
+		<Grid Grid.Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="500" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
 
-		<WindowsFormsHost Grid.Row="1" x:Name="SourceEditHost">
-			<WindowsFormsHost.Child>
-				<scinet:Scintilla x:Name="SourceEdit"/>
-			</WindowsFormsHost.Child>
-		</WindowsFormsHost>
-		<proxy:LegacyStringBinding Grid.Row="0" Element="{Binding ElementName=SourceEdit}" PropertyPath="Text" ChangedEventPath="TextChanged" TargetBinding="{Binding SelectedEntry.Source}" />
+			<DataGrid Grid.Row="0" ItemsSource="{Binding DefaultValues}" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" MouseDoubleClick="DataGrid_MouseDoubleClick">
+				<DataGrid.Columns>
+					<DataGridTemplateColumn Header="Key" Width="220">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding Key}" Foreground="{Binding Changed, Converter={conv:BoolToColor}, ConverterParameter='Black;Gray'}" />
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+					<DataGridTemplateColumn Header="Typ" Width="60">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding TypeStr}" Foreground="{Binding Changed, Converter={conv:BoolToColor}, ConverterParameter='Black;Gray'}" />
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+					<DataGridTemplateColumn Header="Default" Width="120">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding Default}" Foreground="{Binding Changed, Converter={conv:BoolToColor}, ConverterParameter='Black;Gray'}" />
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+					<DataGridTemplateColumn Header="Value" Width="70">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding Value}" Foreground="{Binding Changed, Converter={conv:BoolToColor}, ConverterParameter='Black;Gray'}" />
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+				</DataGrid.Columns>
+			</DataGrid>
+
+			<GridSplitter Grid.Row="1" VerticalAlignment="Stretch" Width="3" Focusable="False" />
+
+			<WindowsFormsHost Grid.Column="2" x:Name="SourceEditHost">
+				<WindowsFormsHost.Child>
+					<scinet:Scintilla x:Name="SourceEdit"/>
+				</WindowsFormsHost.Child>
+			</WindowsFormsHost>
+			<proxy:LegacyStringBinding Grid.Row="0" Element="{Binding ElementName=SourceEdit}" PropertyPath="Text" ChangedEventPath="TextChanged" TargetBinding="{Binding SelectedEntry.Source}" />
+		</Grid>
 
 		<GridSplitter Grid.Row="2" HorizontalAlignment="Stretch" Height="3" Focusable="False" />
 
